fixed Dockerfile